--- a/relay-control.service
+++ b/relay-control.service
@@ -7,7 +7,7 @@ Wants=network-online.target systemd-networkd-wait-online.service
 Type=simple
 User=pi
 WorkingDirectory=/home/pi/relay-control-panel
-ExecStart=/usr/bin/python3 home/pi/relay-control-panel/app.py
+ExecStart=/usr/bin/python3 app.py
 Restart=on-failure
 RestartSec=1s
 
